Revert "Added getEquation() function"
This reverts commit b0897fc361cdbcc521493ae782f18cad7eeb009c.

--- a/Math Learning Game Web Application/css/style.css
+++ b/Math Learning Game Web Application/css/style.css
@@ -219,8 +219,7 @@ input[type="radio"]:checked + label span {
 }
 
 
-#multiplication-Button,
-#submitAnswer-Button {
+#multiplication-Button {
   background: url('../assets/images/Scribble-Button-purple.png');
 	background-size: 100%;
 	background-repeat:no-repeat;
