--- a/Math Learning Game Web Application/css/style.css
+++ b/Math Learning Game Web Application/css/style.css
@@ -1,6 +1,5 @@
 html, body { height: 100%;   }
 body {
-		
 	 font-family: normal 16px/1.5 "Asap", arial, sans-serif; 
     /*
 	font-family: 'Cedarville Cursive', cursive;
@@ -156,6 +155,14 @@ textarea {
 	color: purple;
 }
 
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 			
 input[type="radio"]{
     display: none;
