--- a/Math Learning Game Web Application/css/style.css
+++ b/Math Learning Game Web Application/css/style.css
@@ -77,6 +77,53 @@ body {
 	border: 1px solid;
 	border-color: transparent #ef9f9f; /* Default is #ef9f9f */
 }
+.yellow-paper {
+	font-family: 'Caveat', cursive; /* Annie Use Your Telescope */
+	font-size: 1.8em;
+	/* Default line-height is 20px */
+  /*width: 50%;
+
+  height: 80%; */
+
+	margin: 0 auto;
+	padding: 6px 5px 4px 42px;
+	position: relative;
+	color: #444;
+	line-height: 25px;
+	border: 1px solid #d2d2d2;
+	background: #fff;
+	background: -webkit-gradient(linear, 0 0, 0 100%, from(#55bcf3), color-stop(4%, #fff)) 0 4px;
+	/*background: -webkit-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px; white in chrome */
+	background: -moz-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -ms-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -o-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -webkit-linear-gradient(top, #55bcf3 0%, #fffa5f 8%) 0 4px;
+
+	-webkit-background-size: 100% 25px;
+	-moz-background-size: 100% 25px;
+	-ms-background-size: 100% 25px;
+	-o-background-size: 100% 25px;
+	background-size: 100% 25px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	max-width: 816px;
+	height: 1500px; /*1056 px*/
+}
+.yellow-paper::before {
+	content: '';
+	position: absolute;
+	width: 8px; /* default is 4px */
+	top: 0;
+	left: 30px;
+	bottom: 0;
+	border: 1px solid;
+	border-color: transparent #ef9f9f; /* Default is #ef9f9f */
+}
 textarea {
 	display: block;
 	width: 94%;
@@ -230,6 +277,11 @@ input[type="radio"]:checked + label span {
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
+#submit-Score-Button {
+	background-image: url('../assets/images/Scribble-Button-Red.png');
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
 #userAnswerForm {
 	padding: 0px 20%;
 }
@@ -307,13 +359,125 @@ hr.dottedScissorsLine:after {
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
-.responsiveImg {
-	display: none;
-	width: 70px;	
-}
 .error-msg {
 	text-decoration: underline;
 	color: gold;
 	font-weight: thick;
 	font-size: 1.25em;
+}
+.responsiveImg {
+	display: none;
+	width: 70px;	
+}
+/* -------------- modal box css ------------------*/
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+.modalDialog > div {
+	
+	font-family: 'Caveat', cursive; /* Annie Use Your Telescope */
+	font-size: 1.8em;
+	/* Default line-height is 20px */
+  /*width: 50%;
+
+  height: 80%; */
+
+	margin: 10% auto;
+	padding: 6px 6px 6px 6px;
+	position: relative;
+	color: #444;
+	line-height: 25px;
+	border: 1px solid #d2d2d2;
+	background: #fff;
+	background: -webkit-gradient(linear, 0 0, 0 100%, from(#55bcf3), color-stop(4%, #fff)) 0 4px;
+	/*background: -webkit-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px; white in chrome */
+	background: -moz-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -ms-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -o-linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: linear-gradient(top, #55bcf3 0%, #fff 8%) 0 4px;
+	background: -webkit-linear-gradient(top, #55bcf3 0%, #fffa5f 8%) 0 4px;
+
+	-webkit-background-size: 100% 25px;
+	-moz-background-size: 100% 25px;
+	-ms-background-size: 100% 25px;
+	-o-background-size: 100% 25px;
+	background-size: 100% 25px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+	max-width: 816px;
+	height: 500px; /*1056 px*/
+}
+#pop-up {
+	text-align: center;
+	font-size: 50px;
+}
+.modalDialog > div > h1 {
+	font-size: 90px;
+}
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+
+.close:hover { 
+	background: #00d9ff; 
+}
+table {
+    border-collapse: collapse;
+	alignment-adjust: middle;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+}
+th {
+	height: 60px;
+}
+td {
+    height: 50px;
+}
+table, th, td {
+    border: 3px solid black;
+}
+#pop-up-buttons {
+	padding-top: 30px;
+}
+#pop-up-button-spacer {
+	display: inline-block;
+	margin-left: 30px;
+	margin-right: 30px;
 }
