--- a/Math Learning Game Web Application/css/style.css
+++ b/Math Learning Game Web Application/css/style.css
@@ -282,6 +282,14 @@ input[type="radio"]:checked + label span {
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
+#menu-footer {
+	margin-top: 120px;
+}
+#highscore-Button {
+	background-image: url('../assets/images/Scribble-Button-Orange.png');
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
 #userAnswerForm {
 	padding: 0px 20%;
 }
@@ -428,9 +436,15 @@ hr.dottedScissorsLine:after {
 	max-width: 816px;
 	height: 500px; /*1056 px*/
 }
+#pop-up-main {
+	height: 850px;
+	text-align: center;
+	font-size: 40px;
+	margin: 50px auto;
+}
 #pop-up {
 	text-align: center;
-	font-size: 50px;
+	font-size: 37px;
 }
 .modalDialog > div > h1 {
 	font-size: 90px;
@@ -460,7 +474,7 @@ hr.dottedScissorsLine:after {
 table {
     border-collapse: collapse;
 	alignment-adjust: middle;
-	width: 80%;
+	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 }
